# ColonyGame

./: Cargo.toml  build.rs
assets/: grass.tsx  master.tmx  master.tsx  patterns.tmx  water.tsx
src/: agent.rs  ai.rs  animation.rs  assets.rs  audio.rs  blackboard.rs  ext.rs  inspector.rs  lib.rs  loading.rs  main.rs  marquee.rs  menu.rs  player.rs  reservations.rs  states.rs  villager.rs  worldgen.rs
